@@ -72,7 +72,9 @@ New Features
 
 Improvements
 ---------------------
-(No changes)
+* SOLR-16924: RESTORECORE now sets the UpdateLog to ACTIVE state instead of requiring a separate
+  REQUESTAPPLYUPDATES call in Collection restore. The latter will still happen in 9.x for
+  backwards-compatibility.  (Julia Lamoine, David Smiley)
 
 Optimizations
 ---------------------
